--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./src/css/styles.css">
-    <script defer src="./src/js/index.js"></script>
-    <title>Document</title>
+    <link rel="stylesheet" href="./src/scss/main.scss">
+    <script type="module" src="./src/js/index.js"></script>
+    <title>MuviApi: Search Movies :D</title>
 </head>
 <body>
     <main>
@@ -21,8 +21,6 @@
                 <input type="submit" value="search" class="btn-movie">
             </form>
         </div>
-        
-
     </main>
 </body>
 </html>
