implementing MVC architecture on the project

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/scss/main.scss">
-    <script type="module" src="./src/js/index.js"></script>
+    <script type="module" defer src="./src/js/controller.js"></script>
     <title>MuviApi: Search Movies :D</title>
 </head>
 <body>
