--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
         </section>
 
         <section class="section__movie">
-            <div class="movie__poster">
+            <!-- <div class="movie__poster">
                 <img src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_SX300.jpg" alt="movie-poster">
-            </div>
+            </div> -->
             
             <div class="movie__info">
-                <div class="movie__title">
+                <!-- <div class="movie__title">
                     <div class="type"><span>Movie</span></div>
-                    <h2>The eternal sunshine of the spotless mind</h2>
-                </div>
+                    <h2>Iron Man</h2>
+                </div> -->
 
                 <div class="movie__wrapper movie__wrapper--1">
                     <div class="movie__rated">
