aplying responsive design to the project

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             </div>
         </section>
 
-        <section class="section__movie hidden">
+        <section class="section__movie">
+            <img alt="">
             <!-- <div class="movie__poster">
                 <img src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_SX300.jpg" alt="movie-poster">
             </div>
