finishing the movie feature of the project

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </section>
 
         <section class="section__movie">
-            <img alt="">
+            <!-- <img alt="">
             <figure class="movie__poster">
                 <img src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_SX300.jpg" alt="movie-poster">
             </figure>
@@ -215,7 +215,7 @@
                         </ul>
                     </div>
                 </div>
-            </div> 
+            </div>  -->
         </section>
     </main>
 </body>
